k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-dc-logbook
  namespace: dc-logbook
  labels:
    app: fe-dc-logbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-dc-logbook
  template:
    metadata:
      labels:
        app: fe-dc-logbook
    spec:
      imagePullSecrets:
      - name: registry
      containers:
      - name: fe-dc-logbook
        image: harbor.bkn.go.id/inti-apps/fe-dc-logbook:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: fe-dc-logbook
  namespace: dc-logbook
spec:
  selector:
    app: fe-dc-logbook
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
