k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dc-logbook-ingress
  namespace: dc-logbook
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - logbook.bkn.go.id
    - api-logbook.bkn.go.id
    secretName: dc-logbook-tls
  rules:
  - host: logbook.bkn.go.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe-dc-logbook
            port:
              number: 80
  - host: api-logbook.bkn.go.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: be-dc-logbook
            port:
              number: 8000
